# webgrafix

./: .clang-tidy  .clangd  .gitignore  .gitmodules  .rgignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md  vcpkg.json
.github/workflows/: lint.yml  test.yml
cmake/: CodeCoverage.cmake
docker/: coverage.Dockerfile  coverage.docker-compose.yml  debug.Dockerfile  debug.docker-compose.yml  release.Dockerfile  release.docker-compose.yml
src/: CMakeLists.txt  main.cpp  main.rs  state.rs
src/sublibrary/: CMakeLists.txt  sublib_component.cpp  sublib_component.h  sublib_component_test.cpp
src/webgrafix/: CMakeLists.txt  Webgrafix.cpp  Webgrafix.h
